--- a/ios/Podfile
+++ b/ios/Podfile
@@ -76,7 +76,7 @@ target 'poli' do
   pod 'DoubleConversion', :podspec => '../node_modules/react-native/third-party-podspecs/DoubleConversion.podspec'
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
-
+  pod 'GoogleMaps'
   target 'poliTests' do
     inherit! :complete
     # Pods for testing
